<resources>
    <string name="app_name">CoachPro V0</string>
    <string name="action_settings">Settings</string>
    <string name="welcomeText">Welcome To The Coach Master V0</string>
    <string name="feedbackButtonText">Send FeedBack</string>
    <string name="playerButtonText">I am a Player!</string>
    <string name="coachButtonText">I am a Coach!</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="title_activity_coach">coachActivity</string>
    <string name="title_activity_feed_back">FeedBackActivity</string>
    <string name="feedBackText">Write FeedBack</string>
    <string name="feedBackButton">Send!</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_splash_screen" translatable="false">SplashScreenActivity</string>
    <string name="soundButtonText">Sound</string>
    <string name="configTextView">App\'s Sound: On or Off</string>
    <string name="InverntThemeText">Invert The App\'s Theme</string>
    <string name="CameraText">Camera</string>
    <string name="RateText">Rate This App</string>
    <string name="newScoreText">Add New Score</string>
    <string name="newPlayerText">Add New Player</string>
    <string name="listButtonText">See Player\'s List</string>
</resources>



