<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.cisc.coachmasterv0.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="304dp"
        android:layout_height="493dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/welcomeText"
            android:textColor="@color/colorPrimary"
            android:textSize="23sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="16dp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button5"
                    android:layout_width="126dp"
                    android:layout_height="wrap_content"
                    android:text="@string/playerButtonText" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="137dp"
                    android:layout_height="wrap_content"
                    android:text="@string/coachButtonText" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </TableLayout>

        <Button
            android:id="@+id/feedbackButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedbackButtonText" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
