<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cisc.coachmasterv0.SettingsActivityFragment"
    tools:showIn="@layout/activity_settings">


    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="138dp"
        android:autoText="false"
        android:checked="true"
        android:text="@string/soundButtonText"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/configTextView"
        android:textSize="25sp"
        android:layout_marginBottom="57dp"
        android:layout_alignBottom="@+id/switch1"
        android:layout_alignStart="@+id/ThemeText"
        android:layout_marginStart="13dp" />

    <TextView
        android:id="@+id/ThemeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/InverntThemeText"
        android:textSize="30sp"
        android:layout_below="@+id/switch1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="103dp" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="Switch"
        android:layout_below="@+id/ThemeText"
        android:layout_alignStart="@+id/switch1" />
</RelativeLayout>





